<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/mock_spinners_fr"
              style="@style/baseLayout.withPadding"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              tools:context="com.didekindroid.api.ActivityMock"
              tools:showIn="@layout/mock_ac"
              android:layout_marginTop="@dimen/app_bar_bottom_margin">
    <Spinner
        android:id="@+id/comunidad_spinner"
        style="@style/spinnerBase"/>

    <Spinner
        android:id="@+id/ambito_spinner"
        style="@style/spinnerBase"/>

    <Spinner
        android:id="@+id/importancia_spinner"
        style="@style/spinnerBase"/>

    <Spinner
        android:id="@+id/tipo_via_spinner"
        style="@style/spinnerBase"/>

    <Spinner
        android:id="@+id/autonoma_comunidad_spinner"
        style="@style/spinnerBase"/>

    <Spinner
        android:id="@+id/provincia_spinner"
        style="@style/spinnerBase"/>

    <Spinner
        android:id="@+id/municipio_spinner"
        style="@style/spinnerBase"/>

</LinearLayout>