<?xml version="1.0" encoding="utf-8"?>
<ScrollView style="@style/baseLayout.scroll">
    <android.support.design.widget.CoordinatorLayout
        style="@style/baseLayout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:fitsSystemWindows="true"
        tools:context=".incidencia.comment.IncidCommentRegAc">

        <include layout="@layout/appbar_include_design"/>

        <LinearLayout
            android:id="@+id/incid_comment_reg_ac_layout"
            style="@style/baseLayout.withPadding"
            android:layout_marginTop="@dimen/app_bar_bottom_margin"
            tools:showIn="@layout/incid_comment_reg_ac">

            <LinearLayout style="@style/baseLayout" android:orientation="horizontal">
                <TextView
                    android:id="@+id/incid_comment_incidencias_rot"
                    style="@style/textBase.textPageLabel2"
                    android:layout_weight="0"
                    android:text="@string/incid_incidencia_rot"/>
                <TextView
                    android:id="@+id/incid_reg_desc_txt"
                    style="@style/textBase.textFieldLabel1"
                    android:layout_marginStart="@dimen/simple_horizontal_margin"
                    android:layout_weight="1"
                    android:gravity="start"/>
            </LinearLayout>

            <EditText
                android:id="@+id/incid_comment_ed"
                style="@style/textBase.editField.description"
                android:hint="@string/incid_comment_ed_hint"
                tools:ignore="LabelFor"/>

            <Button
                android:id="@+id/incid_comment_reg_button"
                style="@style/textBase.acButton1"
                android:layout_marginBottom="18dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/incid_comment_ed_button_rot"/>

        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>
</ScrollView>
