<android.support.v7.widget.Toolbar
    android:id="@+id/appbar"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
    android:layout_height="?attr/actionBarSize"
    android:background="?attr/colorPrimary"
    android:elevation="4dp"
    app:titleTextAppearance="@style/appBarTitle"
    app:contentInsetStart="10dp"
    tools:ignore="UnusedAttribute"/>

<!--
To include as an attribute:
app:layout_scrollFlags="scroll|enterAlways"
-->